# dataio

./: .gitignore  README.MD  pyproject.toml
src/dataio/: __init__.py
src/dataio/download/: __init__.py  settings.yaml
src/dataio/upload/: __init__.py
