[tool.poetry]
name = "dataio"
version = "0.1.0"
description = ""
authors = ["Sai Sneha <sneha@artpark.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.64"
pandas = "^2.2.1"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
